# mcpx-eval

./: .gitignore  README.md  mcpx_eval.py  pyproject.toml  run.sh
.github/workflows/: ci.yml  publish.yml
mcpx_eval/: __init__.py  __main__.py  constants.py  database.py  html.py  judge.py  models.py
tests/: factorial-5.toml  github-contributors.toml  google-homepage-images.toml  local.toml  remote.toml  sort.toml  summarize-gist.toml  summarize.toml  test_mcpx.py  valtown.toml
tests/template/: eval.toml
