[project]
name = "mcpx-eval"
version = "0.4.0"
description = "Open ended tool use evaluation framework"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jinja2>=3.1.5",
    "matplotlib>=3.10.0",
    "mcp-run>=0.4.4",
    "mcpx-py>=0.4.2",
    "mcpx-pydantic-ai",
    "pandas>=2.2.0",
    "pystache>=0.6.7",
]

[tool.uv]
package = true

[tool.uv.sources]
mcp-run = { git = "https://github.com/dylibso/mcp-run-py", branch = "sse-only" }
mcpx-pydantic-ai = { git = "https://github.com/dylibso/mcpx-pydantic-ai", branch = "sse-only" }
mcpx-py = { git = "https://github.com/dylibso/mcpx-py", branch = "sse-only" }

[dependency-groups]
dev = [
    "python-lsp-ruff>=2.2.2",
    "python-lsp-server>=1.12.2",
    "ruff>=0.9.6",
]

[project.scripts]
mcpx-eval = "mcpx_eval.__main__:main"

# Workaround for uv/setuptools version mismatch
# https://github.com/astral-sh/uv/issues/9513#issuecomment-2519527822
[tool.setuptools]
license-files = []
